# BwhDesktop

./: .gitignore  BwhDesktop.sln  CMakeLists.txt  CheckBoxHeader.h  Vps.h  VpsInfo.h  VpsTableModel.cpp  addconfig.cpp  addconfig.h  addconfig.ui  bwhdesktop.cpp  bwhdesktop.h  bwhdesktop.ui  editconfig.cpp  editconfig.h  editconfig.ui  main.cpp
BwhDesktop/: AddConfig.cpp  AddConfig.h  AddConfig.ui  BwhDesktop.aps  BwhDesktop.cpp  BwhDesktop.h  BwhDesktop.qrc  BwhDesktop.rc  BwhDesktop.ui  BwhDesktop.vcxproj  BwhDesktop.vcxproj.filters  CheckBoxHeader.cpp  EditConfig.cpp  EditConfig.h  EditConfig.ui  Icon.rc  Vps.h  VpsInfo.cpp  VpsTableModel.h  main.cpp  resource.h  resource1.h
